--- a/index.html
+++ b/index.html
@@ -12,41 +12,38 @@
 <body>
     <div class="container">
         <header>
-            <!-- <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div> -->
             <i class="fa-solid fa-bars"></i>
-            <span>S H O P</span>
+            <a href="index.html"><span>S H O P</span></a>
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </header>
         <nav>
             <a href="items.html">Men's Outerwear</a>
-            <a href="demo.html">Ladies Outerwear</a>
-            <a href="demo.html">Men's T-Shirts</a>
-            <a href="demo.html">Ladies T-Shirts</a>
+            <a href="items.html">Ladies Outerwear</a>
+            <a href="items.html">Men's T-Shirts</a>
+            <a href="items.html">Ladies T-Shirts</a>
         </nav>
-        <div class="men-wear">
-            <a href="items.html"><div class="bg"></div></a>
-            <div class="home-shop">Men's Outerwear</div>
-            <a href="items.html"><button>SHOP NOW</button></a>
-        </div>
-        <div class="women-wear">
-            <a href="demo.html"><div class="bg"></div></a>
-            <div class="home-shop">Ladies Outerwear</div>
-            <a href="demo.html"><button>SHOP NOW</button></a>
-        </div>
-        <div class="tShirts">
-            <div class="men-shirt">
-                <a href="demo.html"><div class="bg"></div></a>
-                <div class="home-shop">Men's T-Shirts</div>
-                <a href="demo.html"><button>SHOP NOW</button></a>
+        <div class="home-container">
+            <div class="wear">
+                <a href="items.html"><div class="home-img"><img src="./images/mens_outerwear.jpg" alt="Men's Outerwear"/></div></a>
+                <p class="home-tag">Men's Outerwear</p>
+                <a href="items.html"><button class="shop-button">SHOP NOW</button></a>
             </div>
-            <div class="women-shirt">
-                <a href="demo.html"><div class="bg"></div></a>
-                <div class="home-shop">Ladies T-Shirts</div>
-                <a href="demo.html"><button>SHOP NOW</button></a>
+            <div class="wear">
+                <a href="items.html"><div class="home-img"><img src="./images/ladies_outerwear.jpg" alt="Men's Outerwear"/></div></a>
+                <p class="home-tag">Ladies Outerwear</p>
+                <a href="items.html"><button class="shop-button">SHOP NOW</button></a>
+            </div>
+            <div class="wear-tshirt">
+                <div class="tshirt">
+                    <a href="items.html"><div class="home-img"><img src="./images/mens_tshirts.jpg" alt="men-tshirts"/></div></a>
+                    <p class="home-tag shirt">Men's T-Shirts</p>
+                    <a href="items.html"><button class="shop-button-t">SHOP NOW</button></a>
+                </div>
+                <div class="tshirt">
+                    <a href="items.html"><div class="home-img"><img src="./images/ladies_tshirts.jpg" alt="ladies-tshirts"/></div></a>
+                    <p class="home-tag shirt">Ladies T-Shirts</p>
+                    <a href="items.html"><button class="shop-button-t">SHOP NOW</button></a>
+                </div>
             </div>
         </div>
         <footer>
