item listing page

--- a/items.html
+++ b/items.html
@@ -1,122 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Outerwear - SHOP</title>
-    <link rel="icon" href="./images/icon.svg" type="image/svg+xml"/>
-    <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="styles.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    <link rel="icon" href="./images/icon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
+
 <body>
     <div class="container">
         <header>
             <i class="fa-solid fa-bars"></i>
             <a href="index.html"><span>S H O P</span></a>
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-        </header>
-        <nav class="items-mobile">
-            <a class="visit" href="items.html">Men's Outerwear</a>
-            <a href="demo.html">Ladies Outerwear</a>
-            <a href="demo.html">Men's T-Shirts</a>
-            <a href="demo.html">Ladies T-Shirts</a>
+        </header>   
+        <nav>
+            <a href="items.html" class="visit">Men's Outerwear</a>
+            <a href="items.html">Ladies Outerwear</a>
+            <a href="items.html">Men's T-Shirts</a>
+            <a href="items.html">Ladies T-Shirts</a>
         </nav>
-        <div class="men-wear items-mobile">
-            <div class="bg"></div>
+        <div class="home-img-item">
+            <div class="home-img men-cursor"><img src="./images/mens_outerwear.jpg"/></div>
         </div>
-        <div class="men-items">
-            <div class="header-desc">
-                <p class="item-name">Men's Outerwear</p>
-                <p class="item-no">(16 items)</p>
-            </div>
-            <div class="items-lists">
-                <a href="single-item.html"><div class="item-card">
-                    <img src="./images/men1.jpg" alt="Men's Outerwear" class="item-img" />
+        <div class="header-desc">
+            <p class="item-name-h">Men's Outerwear</p>
+            <p class="item-no">(16 items)</p>
+        </div>
+        <ul class="items-lists">
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men1.jpg" alt="Men's Outerwear" class="item-img"/>   
                     <p class="item-name">Men's Tech Shell Full-Zip</p>
-                    <p class="item-no">$50.20</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men2.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Anvil L/S Crew Neck - Grey</p>
-                    <p class="item-no">$22.15</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men3.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Green Flex Fleece Zip Hoodie</p>
-                    <p class="item-no">$45.65</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men4.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Android Nylon Packable Jacket</p>
-                    <p class="item-no">$33.60</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men5.jpg" alt="Men's Outerwear" class="item-img" />
+                    <p class="item-cost">&dollar;50.20</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men2.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Anvil L/S Crew Neck - Grey</p>
+                    <p class="item-cost">&dollar;22.15</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men3.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Green Flex Fleece Zip Hoodie</p>
+                    <p class="item-cost">&dollar;45.65</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men4.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Android Nylon Packable Jacket</p>
+                    <p class="item-cost">&dollar;33.60</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men5.jpg" alt="Men's Outerwear" class="item-img"/>   
                     <p class="item-name">YouTube Ultimate Hooded Sweatshirt</p>
-                    <p class="item-no">$32.35</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men6.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Grey Heather Fleece Zip Hoodie</p>
-                    <p class="item-no">$38.85</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men7.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Vastrm Hoodie</p>
-                    <p class="item-no">$200.00</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men8.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Recycled Plastic Bottle Hoodie - Greeen</p>
-                    <p class="item-no">$60.95</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men9.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p class="item-name">Rowan Pullover Hood/p>
-                    <p class="item-no">$60.85</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men10.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Men's Voyage Fleece Jacket</p>
-                    <p class="item-no">$48.00</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men11.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Eco-Jersey Chrome Zip Up Hoodie</p>
-                    <p class="item-no">$37.75</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men12.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Android Colorblock Hooded Pullover</p>
-                    <p class="item-no">$50.20</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men13.jpg" alt="Men's Outerwear" class="item-img" />
+                    <p class="item-cost">&dollar;32.35</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men6.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Grey Heather Fleece Zip Hoodie</p>
+                    <p class="item-cost">&dollar;38.85</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men7.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Vastrm Hoodie</p>
+                    <p class="item-cost">&dollar;200.00</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men8.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Recycled Plastic Bottle Hoodie - Green</p>
+                    <p class="item-cost">&dollar;60.95</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men9.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Rowan Pullover Hood</p>
+                    <p class="item-cost">&dollar;60.85</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men10.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Men's Voyage Fleece Jacket</p>
+                    <p class="item-cost">&dollar;48.00</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men11.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Eco-Jersey Chrome Zip Up Hoodie</p>
+                    <p class="item-cost">&dollar;37.75</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men12.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Android Colorblock Hooded Pullover</p>
+                    <p class="item-cost">&dollar;50.20</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men13.jpg" alt="Men's Outerwear" class="item-img"/>   
                     <p class="item-name">Tri-blend Full-Zip Hoodie</p>
-                    <p class="item-no">$52.20</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men14.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Fleece Full-Zip Hoodie</p>
-                    <p class="item-no">$45.65</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men15.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>Jacquard-Knit Full-Zip Fleece</p>
-                    <p class="item-no">$74.90</p>
-                </div></a>
-                <a href="demo.html"><div class="item-card">
-                    <img src="./images/men16.jpg" alt="Men's Outerwear" class="item-img" />
-                    <p>YouTube Unisex Flex Fleece Zip Hoodie</p>
-                    <p class="item-no">$45.25</p>
-                </div></a>
-            </div>
-        </div>
+                    <p class="item-cost">&dollar;52.20</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men14.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Fleece Full-Zip Hoodie</p>
+                    <p class="item-cost">&dollar;45.65</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men15.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">Jacquard-Knit Full-Zip Fleece</p>
+                    <p class="item-cost">&dollar;74.90</p>
+                </a>
+            </li>
+            <li class="item-card">
+                <a href="single-item.html">
+                    <img src="./images/men16.jpg" alt="Men's Outerwear" class="item-img"/>   
+                    <p class="item-name">YouTube Unisex Flex Fleece Zip Hoodie</p>
+                    <p class="item-cost">&dollar;45.25</p>
+                </a>
+            </li>
+        </ul>
         <footer>
-            <a class="copyright">Made by Polymer</a><br>
+            <a>Made by Polymer</a><br>
             <button>DEMO ONLY</button>
         </footer>
     </div>
 </body>
+
 </html>
