--- a/single-item.html
+++ b/single-item.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single-Item</title>
-    <link rel="icon" href="./images/icon.svg" type="image/svg+xml"/>
-    <link rel="stylesheet" href="styles.css"/>
-    <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    <link rel="icon" href="./images/icon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -16,7 +18,7 @@
             <a href="index.html"><span>S H O P</span></a>
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </header>
-        <nav class="items-mobile">
+        <nav>
             <a class="visit" href="items.html">Men's Outerwear</a>
             <a href="demo.html">Ladies Outerwear</a>
             <a href="demo.html">Men's T-Shirts</a>
@@ -24,13 +26,12 @@
         </nav>
         <div class="item-single">
             <div class="single">
-                <!-- <div class="item-img"></div> -->
-                <img src="./images/men1.jpg" alt="Men's Outerwear" class="item-img" />
+                <img src="./images/men1.jpg" alt="Men's Outerwear" class="item-img-single" />
             </div>
             <div class="more">
-                <div class="item-title">
-                    <p>Men's Tech Shell Full-Zip</p>
-                    <p class="item-no">$45.25</p>
+                <div>
+                    <p class="item-title">Men's Tech Shell Full-Zip</p>
+                    <p class="price">$50.20</p>
                 </div>
                 <!-- choice -->
                 <div class="choices">
@@ -57,32 +58,38 @@
                         </select>
                     </div>
                     <hr>
-                </div>
-                <p class="desc">Description</p>
-                <div class="description">
-                    <p>A versatile full-zip that you can wear all day long
-                        and even to the gym. This technical shell features 
-                        moisture-wicking fabric, added stretch and a hidden 
-                        pocket for your smartphone or media player.
-                    </p>
-                    <dl>
-                        <dt>Features:</dt>
-                    </dl>
-                    <ul>
-                        <li>100% polyester.</li>
-                        <li>Smooth, technical front with textured mesh back.</li>
-                        <li>Drawstring bottom for adjustable fit.</li>
-                        <li>Raglan sleeves.</li>
-                        <li>Available in forest green with the white Google logo embroidered at left chest.</li>
-                    </ul>
+                    <!-- </div> -->
+                    <p class="desc">Description</p>
+                    <div class="description">
+                        <p>A versatile full-zip that you can wear all day long
+                            and even to the gym. This technical shell features
+                            moisture-wicking fabric, added stretch and a hidden
+                            pocket for your smartphone or media player.
+                        </p>
+                        <div><br></div>
+                        <dl>
+                            <dt>Features:</dt>
+                        </dl>
+                        <ul class="feature-item">
+                            <li>100% polyester.</li>
+                            <li>Smooth, technical front with textured mesh back.</li>
+                            <li>Drawstring bottom for adjustable fit.</li>
+                            <li>Raglan sleeves.</li>
+                            <li>Available in forest green with the white Google logo embroidered at left chest.</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="cart.html"><button class="cart-btn-desktop">ADD TO CART</button></a>
+                    </div>
                 </div>
                 <a href="cart.html"><button class="cart-btn">ADD TO CART</button></a>
             </div>
         </div>
-        <footer>
-            <a class="copyright">Made by Polymer</a><br>
-            <button>DEMO ONLY</button>
-        </footer>
     </div>
+    <footer>
+        <a>Made by Polymer</a><br>
+        <button>DEMO ONLY</button>
+    </footer>
 </body>
+
 </html>
