--- a/cart.html
+++ b/cart.html
@@ -22,6 +22,7 @@
             <p>Your Cart</p>
             <span class="item-no">(2 items)</span>
         </div>
+        <div class="cart">
         <div class="cart-item">
             <div>
                 <img src="./images/men6.jpg" alt="wear not found" class="cart-img" />
@@ -57,43 +58,6 @@
                 <i class="fa-solid fa-xmark"></i>
             </div>
         </div>
-
-        <!-- <div class="cart-item">
-            <div>
-                <img src="./images/men2.jpg" alt="wear not found" class="cart-img" />
-            </div>
-            <div class="top-info">
-                <div class="cart-name">Anvil L/S Crew Neck - Grey</div>
-                <div class="bottom-info">
-                    <div class="cart-qty">
-                        <label>Qty:</label>
-                        <select>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
-                    </div>
-                    <div class="cart-size">
-                        <label>Size:</label>
-                        <span>M</span>
-                    </div>
-                    <div class="cart-price">$22.15</div>
-                </div>
-            </div>
-            <div class="cross-mark">
-                <i class="fa-solid fa-xmark"></i>
-            </div>
-        </div> -->
-
         <div class="cart-item">
             <div>
                 <img src="./images/men4.jpg" alt="wear not found" class="cart-img" />
@@ -129,89 +93,17 @@
                 <i class="fa-solid fa-xmark"></i>
             </div>
         </div>
-
-        <!-- <div class="cart-item">
-            <div>
-                <img src="./images/men11.jpg" alt="wear not found" class="cart-img" />
-            </div>
-            <div class="top-info">
-                <div class="cart-name">Eco-Jersey Chrome Zip Up Hoodie</div>
-                <div class="bottom-info">
-                    <div class="cart-qty">
-                        <label>Qty:</label>
-                        <select>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
-                    </div>
-                    <div class="cart-size">
-                        <label>Size:</label>
-                        <span>M</span>
-                    </div>
-                    <div class="cart-price">$37.75</div>
-                </div>
-            </div>
-            <div class="cross-mark">
-                <i class="fa-solid fa-xmark"></i>
-            </div>
-        </div>
-
-        <div class="cart-item">
-            <div>
-                <img src="./images/men15.jpg" alt="wear not found" class="cart-img" />
-            </div>
-            <div class="top-info">
-                <div class="cart-name">Jacquard-Knit Full-Zip Fleece</div>
-                <div class="bottom-info">
-                    <div class="cart-qty">
-                        <label>Qty:</label>
-                        <select>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
-                    </div>
-                    <div class="cart-size">
-                        <label>Size:</label>
-                        <span>M</span>
-                    </div>
-                    <div class="cart-price">$74.90</div>
-                </div>
-            </div>
-            <div class="cross-mark">
-                <i class="fa-solid fa-xmark"></i>
-            </div>
-        </div> -->
         <div class="total">
             <span>Total:</span>
             <span>&dollar;72.45</span>
+            <a href="checkout.html"><button class="cart-btn-desk">CHECKOUT</button></a>
+            <a href="checkout.html"><button class="cart-btn-check cart-btn">CHECKOUT</button></a>
         </div>
-        <a href="checkout.html"><button class="cart-btn-desk">CHECKOUT</button></a>
-        <footer class="foot">
-            <a class="copyright">Made by Polymer</a><br>
-            <button>DEMO ONLY</button>
-        </footer>
-        <a href="checkout.html"><button class="cart-btn-check cart-btn">CHECKOUT</button></a>
     </div>
+    </div>
+    <footer>
+        <a>Made by Polymer</a><br>
+        <button>DEMO ONLY</button>
+    </footer>
 </body>
-
 </html>
