--- a/cart.html
+++ b/cart.html
@@ -101,7 +101,7 @@
         </div>
     </div>
     </div>
-    <footer>
+    <footer class="hide">
         <a>Made by Polymer</a><br>
         <button>DEMO ONLY</button>
     </footer>
