modified files to get pixel perfect

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - SHOP</title>
-    <link rel="icon" href="./images/icon.svg" type="image/svg+xml"/>
-    <link rel="stylesheet" href="styles.css"/>
-    <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    <link rel="icon" href="./images/icon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -22,34 +24,51 @@
             <a href="items.html">Men's T-Shirts</a>
             <a href="items.html">Ladies T-Shirts</a>
         </nav>
-        <div class="home-container">
+        <main class="home-container">
             <div class="wear">
-                <a href="items.html"><div class="home-img"><img src="./images/mens_outerwear.jpg" alt="Men's Outerwear"/></div></a>
+                <div class="home-img">
+                    <a href="items.html">
+                        <img src="./images/mens_outerwear.jpg" alt="Men's Outerwear" />
+                    </a>
+                </div>
                 <p class="home-tag">Men's Outerwear</p>
                 <a href="items.html"><button class="shop-button">SHOP NOW</button></a>
             </div>
             <div class="wear">
-                <a href="items.html"><div class="home-img"><img src="./images/ladies_outerwear.jpg" alt="Men's Outerwear"/></div></a>
+                <div class="home-img">
+                    <a href="items.html">
+                        <img src="./images/ladies_outerwear.jpg" alt="Men's Outerwear" />
+                    </a>
+                </div>
                 <p class="home-tag">Ladies Outerwear</p>
                 <a href="items.html"><button class="shop-button">SHOP NOW</button></a>
             </div>
             <div class="wear-tshirt">
                 <div class="tshirt">
-                    <a href="items.html"><div class="home-img"><img src="./images/mens_tshirts.jpg" alt="men-tshirts"/></div></a>
+                    <div class="home-img">
+                        <a href="items.html">
+                            <img src="./images/mens_tshirts.jpg" alt="men-tshirts" />
+                        </a>
+                    </div>
                     <p class="home-tag shirt">Men's T-Shirts</p>
                     <a href="items.html"><button class="shop-button-t">SHOP NOW</button></a>
                 </div>
                 <div class="tshirt">
-                    <a href="items.html"><div class="home-img"><img src="./images/ladies_tshirts.jpg" alt="ladies-tshirts"/></div></a>
+                    <div class="home-img">
+                        <a href="items.html">
+                            <img src="./images/ladies_tshirts.jpg" alt="ladies-tshirts" />
+                        </a>
+                    </div>
                     <p class="home-tag shirt">Ladies T-Shirts</p>
                     <a href="items.html"><button class="shop-button-t">SHOP NOW</button></a>
                 </div>
             </div>
-        </div>
+        </main>
         <footer>
-            <a>Made by Polymer</a><br>
+            <a href="https://polymer-library.polymer-project.org/3.0/docs/apps/">Made by Polymer</a><br>
             <button>DEMO ONLY</button>
         </footer>
     </div>
 </body>
+
 </html>
