--- a/cart.html
+++ b/cart.html
@@ -22,88 +22,101 @@
             <p>Your Cart</p>
             <span class="item-no">(2 items)</span>
         </div>
-        <div class="cart">
-        <div class="cart-item">
-            <div>
-                <img src="./images/men6.jpg" alt="wear not found" class="cart-img" />
-            </div>
-            <div class="top-info">
-                <div class="cart-name">Grey Heather Fleece Zip Hoodie</div>
-                <div class="bottom-info">
-                    <div class="cart-qty">
-                        <label>Qty:</label>
-                        <select>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
+        <main class="cart">
+            <div class="cart-list">
+                <div class="cart-item">
+                    <a href="single-item.html">
+                        <img src="./images/men6.jpg" alt="wear not found" class="cart-img" />
+                    </a>
+                    <div class="cart-info">
+                        <div class="cart-name">
+                            <a href="single-item.html">Grey Heather Fleece Zip Hoodie</a>
+                        </div>
+                        <div class="item-info">
+                            <div class="cart-qty">
+                                <label>Qty:</label>
+                                <select>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                    <option>6</option>
+                                    <option>7</option>
+                                    <option>8</option>
+                                    <option>9</option>
+                                    <option>10</option>
+                                    <option>11</option>
+                                    <option>12</option>
+                                </select>
+                            </div>
+                            <div class="cart-size">
+                                <label>Size:</label>
+                                <span>M</span>
+                            </div>
+                            <div class="cart-price">$38.85</div>
+                            <div class="cross-mark">
+                                <i class="fa-solid fa-xmark"></i>
+                            </div>
+                        </div>
                     </div>
-                    <div class="cart-size">
-                        <label>Size:</label>
-                        <span>M</span>
+                </div>
+                <div class="cart-item">
+                    <a href="single-item.html">
+                        <img src="./images/men4.jpg" alt="wear not found" class="cart-img" />
+                    </a>
+                    <div class="cart-info">
+                        <div class="cart-name">
+                            <a href="single-item.html">Android Nylon Packable Jacket</a>
+                        </div>
+                        <div class="item-info extra">
+                            <div class="cart-qty">
+                                <label>Qty:</label>
+                                <select>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                    <option>6</option>
+                                    <option>7</option>
+                                    <option>8</option>
+                                    <option>9</option>
+                                    <option>10</option>
+                                    <option>11</option>
+                                    <option>12</option>
+                                </select>
+                            </div>
+                            <div class="cart-size">
+                                <label>Size:</label>
+                                <span>M</span>
+                            </div>
+                            <div class="cart-price">&dollar;33.60</div>
+                            <div class="cross-mark">
+                                <i class="fa-solid fa-xmark"></i>
+                            </div>
+                        </div>
                     </div>
-                    <div class="cart-price">$38.85</div>
+                </div>
+                <div class="total-desk">
+                    Total:
+                    <span>&dollar;72.45</span>
+                    <a href="checkout.html"><button class="cart-btn-desk">CHECKOUT</button></a>
+                    <a href="checkout.html"><button class="cart-btn-check cart-btn">CHECKOUT</button></a>
                 </div>
             </div>
-            <div class="cross-mark">
-                <i class="fa-solid fa-xmark"></i>
+            <div class="total">
+                Total:
+                <span>&dollar;72.45</span>
+                <a href="checkout.html"><button class="cart-btn-desk">CHECKOUT</button></a>
+                <a href="checkout.html"><button class="cart-btn-check cart-btn">CHECKOUT</button></a>
             </div>
-        </div>
-        <div class="cart-item">
-            <div>
-                <img src="./images/men4.jpg" alt="wear not found" class="cart-img" />
-            </div>
-            <div class="top-info">
-                <div class="cart-name">Android Nylon Packable Jacket</div>
-                <div class="bottom-info">
-                    <div class="cart-qty">
-                        <label>Qty:</label>
-                        <select>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
-                    </div>
-                    <div class="cart-size">
-                        <label>Size:</label>
-                        <span>M</span>
-                    </div>
-                    <div class="cart-price">$33.60</div>
-                </div>
-            </div>
-            <div class="cross-mark">
-                <i class="fa-solid fa-xmark"></i>
-            </div>
-        </div>
-        <div class="total">
-            <span>Total:</span>
-            <span>&dollar;72.45</span>
-            <a href="checkout.html"><button class="cart-btn-desk">CHECKOUT</button></a>
-            <a href="checkout.html"><button class="cart-btn-check cart-btn">CHECKOUT</button></a>
-        </div>
+        </main>
+        <footer class="hide">
+            <a href="https://polymer-library.polymer-project.org/3.0/docs/apps/">Made by Polymer</a><br>
+            <button>DEMO ONLY</button>
+        </footer>
     </div>
-    </div>
-    <footer class="hide">
-        <a>Made by Polymer</a><br>
-        <button>DEMO ONLY</button>
-    </footer>
 </body>
+
 </html>
