--- a/checkout.html
+++ b/checkout.html
@@ -16,7 +16,7 @@
             <a href="index.html"><span>S H O P</span></a>
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </header>
-        <div class="checkout-container">
+        <main class="checkout-container">
             <p class="checkout-head">Checkout</p>
             <p class="checkout-desc">Shop is a demo app - form data will not be sent</p>
             <div class="form-order">
@@ -30,7 +30,7 @@
                         <label>Phone Number</label>
                         <input/>
                     </div>
-                    <h5 class="h5">Shipping Address</h5>
+                    <h5>Shipping Address</h5>
                     <div class="input-style">
                         <label>Address</label>
                         <input/>
@@ -108,16 +108,17 @@
                     <h5>Order Summary</h5>
                     <p class="orders"><span>Grey Heather Fleece Zip Hoodie</span><span>&dollar;38.85</span></p>
                     <p class="orders"><span>Android Nylon Packable Jacket</span><span>&dollar;33.60</span></p><br>
-                    <p class="orders"><span>Total</span><span>&dollar;72.45</span></p>
+                    <p class="orders t "><span>Total</span><span>&dollar;72.45</span></p>
                     <button class="order-btn-desk">PLACE ORDER</button>
+                    <div class="space"></div>
                     <button class="order-btn">PLACE ORDER</button>
                 </div>
             </div>
-        </div>
+        </main>
+        <footer class="hide">
+            <a href="https://polymer-library.polymer-project.org/3.0/docs/apps/">Made by Polymer</a><br>
+            <button>DEMO ONLY</button>
+        </footer>
     </div>
-    <footer>
-        <a>Made by Polymer</a><br>
-        <button>DEMO ONLY</button>
-    </footer>
 </body>
 </html>
