--- a/single-item.html
+++ b/single-item.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +9,6 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-
 <body>
     <div class="container">
         <header>
@@ -24,7 +22,7 @@
             <a href="demo.html">Men's T-Shirts</a>
             <a href="demo.html">Ladies T-Shirts</a>
         </nav>
-        <div class="item-single">
+        <main class="item-single">
             <div class="single">
                 <img src="./images/men1.jpg" alt="Men's Outerwear" class="item-img-single" />
             </div>
@@ -37,7 +35,7 @@
                 <div class="choices">
                     <hr>
                     <div class="choice size">
-                        <label class="item-no">Size</label>
+                        <label class="items-no">Size</label>
                         <select>
                             <option>XS</option>
                             <option>S</option>
@@ -48,7 +46,7 @@
                     </div>
                     <hr>
                     <div class="choice quant">
-                        <label class="item-no">Quantity</label>
+                        <label class="items-no">Quantity</label>
                         <select>
                             <option>1</option>
                             <option>2</option>
@@ -58,38 +56,36 @@
                         </select>
                     </div>
                     <hr>
-                    <!-- </div> -->
-                    <p class="desc">Description</p>
-                    <div class="description">
-                        <p>A versatile full-zip that you can wear all day long
-                            and even to the gym. This technical shell features
-                            moisture-wicking fabric, added stretch and a hidden
-                            pocket for your smartphone or media player.
-                        </p>
-                        <div><br></div>
-                        <dl>
-                            <dt>Features:</dt>
-                        </dl>
-                        <ul class="feature-item">
-                            <li>100% polyester.</li>
-                            <li>Smooth, technical front with textured mesh back.</li>
-                            <li>Drawstring bottom for adjustable fit.</li>
-                            <li>Raglan sleeves.</li>
-                            <li>Available in forest green with the white Google logo embroidered at left chest.</li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="description">
+                    <h2 id="desc">Description</h2>
+                    <p>A versatile full-zip that you can wear all day long
+                        and even to the gym. This technical shell features
+                        moisture-wicking fabric, added stretch and a hidden
+                        pocket for your smartphone or media player.
+                    </p>
+                    <div><br></div>
+                    <dl>
+                        <dt>Features:</dt>
+                    </dl>
+                    <ul class="feature-item">
+                        <li>100% polyester.</li>
+                        <li>Smooth, technical front with textured mesh back.</li>
+                        <li>Drawstring bottom for adjustable fit.</li>
+                        <li>Raglan sleeves.</li>
+                        <li>Available in forest green with the white Google logo embroidered at left chest.</li>
+                    </ul>
                     <div>
                         <a href="cart.html"><button class="cart-btn-desktop">ADD TO CART</button></a>
                     </div>
                 </div>
                 <a href="cart.html"><button class="cart-btn">ADD TO CART</button></a>
             </div>
-        </div>
+        </main>
+        <footer class="foot-single">
+            <a href="https://polymer-library.polymer-project.org/3.0/docs/apps/">Made by Polymer</a><br>
+            <button>DEMO ONLY</button>
+        </footer>
     </div>
-    <footer>
-        <a>Made by Polymer</a><br>
-        <button>DEMO ONLY</button>
-    </footer>
 </body>
-
 </html>
